# prefect-k8s-autoscaling

./: README.MD
helm/: README.md
helm/prefect-server/: Makefile  configmap.yaml  values.yaml  work-pool-advanced.yaml
helm/prefect-workers/: Makefile  values_main.yaml  values_test.yaml
helm/spark-operator/: Makefile  configmap.yaml  values.yaml
pkg/kubeutils/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
pkg/kubeutils/examples/: download_secrets.py
pkg/kubeutils/kubeutils/: api.py  application.py  kube.py
pkg/kubeutils/kubeutils/manifests/: sparkV1.yaml
pkg/kubeutils/tests/: test_api.py  test_application.py  test_kube.py
templates/: .env
templates/python-prefect-template/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  prefect.yaml  pyproject.toml
templates/python-prefect-template/scripts/: README.md
templates/python-prefect-template/src/: config.py  utils.py
templates/python-prefect-template/src/flows/: flow.py
templates/spark-prefect-template/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  prefect.yaml  pyproject.toml
templates/spark-prefect-template/src/: config.py  utils.py
templates/spark-prefect-template/src/application/: readme.md  spark_application.py
templates/spark-prefect-template/src/flows/: flow.py  readme.md
templates/spark-prefect-template/src/manifests/: readme.md  spark_based.yaml
templates/spark-prefect-template/tests/: test_flow.py
