[tool.poetry]
name = "spark-prefect-template"
authors = ["Nesmeyanov Dmitry <nesmeyanov.dv@avgd.pro>"]
readme = "README.md"
package-mode = false
version = "5.0.0"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.121"
kubeutils = {version = ">=1.0.9", source = "kubeutils"}

[tool.poetry.group.addons.dependencies]
pre-commit = "^3.7.1"

[tool.poetry.group.build.dependencies]
requests = "<2.32.0"
prefect = {version=">=2.19.5", extras=["aws"]}
prefect-kubernetes = "^0.3.11"
prefect-docker = "^0.5.3"
griffe = "^0.27.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.5.2"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
pytest-testmon = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "kubeutils"
url = ""
priority = "supplemental"
